--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
     <section class="projects">
         <h2>Assignments</h2>
         <ul>
-            <li><a href="#">Hyper-text Self-portrait</a></li>
+            <li><a href="CSCI202/selfportrait.html">Hyper-text Self-portrait</a></li>
             <li><a href="#">Mobile Site</a></li>
             <li><a href="#">Community Building</a></li>
+            
         </ul>
     </section>
 
     <section class="exercises">
         <h2>Exercises</h2>
         <ul>
-            <li><a href="painting/painiting.html">Reproduce Painting</a></li>
+            <li><a href="CSCI202/painting/painiting.html">Reproduce Painting</a></li>
         </ul>
     </section>
 
