--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="exercises">
         <h2>Exercises</h2>
         <ul>
-            <li><a href="CSCI202/painting/painiting.html">Reproduce Painting</a></li>
+            <li><a href="CSCI202/painiting.html">Reproduce Painting</a></li>
         </ul>
     </section>
 
