--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2>Assignments</h2>
         <ul>
             <nav>
-            <li><a href="CSCI202/selfportrait.html">Hyper-text Self-portrait</a></li>
+            <li><a href="CSCI202/painting/selfportrait.html">Hyper-text Self-portrait</a></li>
             <li><a href="#">Mobile Site</a></li>
             <li><a href="#">Community Building</a></li>
             </nav>
