--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2>Assignments</h2>
         <ul>
             <nav>
-            <li><a href="CSCI202/painting/selfportrait.html">Hyper-text Self-portrait</a></li>
+            <li><a href="painting/selfportrait.html">Hyper-text Self-portrait</a></li>
             <li><a href="#">Mobile Site</a></li>
             <li><a href="#">Community Building</a></li>
             </nav>
@@ -27,7 +27,7 @@
     <section class="exercises">
         <h2>Exercises</h2>
         <ul>
-            <li><a href="CSCI202/painiting.html">Reproduce Painting</a></li>
+            <li><a href="painting/painiting.html">Reproduce Painting</a></li>
         </ul>
     </section>
 
