--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
+
     <title>FA19 CSCI202</title>
 </head>
 <body>
@@ -16,9 +18,9 @@
         <h2>Assignments</h2>
         <ul>
             <nav>
-            <li><a href="painting/selfportrait.html">Hyper-text Self-portrait</a></li>
-            <li><a href="#">Mobile Site</a></li>
-            <li><a href="#">Community Building</a></li>
+            <a href="painting/selfportrait.html">Hyper-text Self-portrait</a>
+            <a href="#">Mobile Site</a>
+            <a href="#">Community Building</a>
             </nav>
             
         </ul>
@@ -27,7 +29,7 @@
     <section class="exercises">
         <h2>Exercises</h2>
         <ul>
-            <li><a href="painting/painiting.html">Reproduce Painting</a></li>
+            <a href="painting/painiting.html">Reproduce Painting</a>
         </ul>
     </section>
 
