--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,6 +31,7 @@
         <h2>Exercises</h2>
         <ul>
             <a href="painting/painiting.html">Reproduce Painting</a>
+            <a href="__MACOSX/lab2-w3js/w3js.html">Lab2</a>
         </ul>
     </section>
 
