--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <h2>Exercises</h2>
         <ul>
             <a href="painting/painiting.html">Reproduce Painting</a>
-            <a href="__MACOSX/lab2-w3js/w3js.html">Lab2</a>
+            <a href="lab2-w3js/w3js.html">Lab2</a>
+            <a href="waybackmachine.doc">waybackmachine</a>
         </ul>
     </section>
 
