--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,9 +18,11 @@
         <h2>Assignments</h2>
         <ul>
             <nav>
-            <a href="painting/selfportrait.html">Hyper-text Self-portrait</a>
-            <a href="#">Mobile Site</a>
-            <a href="#">Community Building</a>
+
+            <li><a href="painting/selfportrait.html">Hyper-text Self-portrait</a> </li>
+            <li><a href="SelfportraitStatement.docx">Self-portrait Reflection</a> </li>
+            <li><a href="#">Mobile Site</a></li>
+            <li><a href="#">Community Building</a></li>
             </nav>
             
         </ul>
@@ -31,9 +32,17 @@
         <h2>Exercises</h2>
         <ul>
             <a href="painting/painiting.html">Reproduce Painting</a>
-            <a href="lab2-w3js/w3js.html">Lab2</a>
-            <a href="waybackmachine.doc">waybackmachine</a>
+            <a href="wayback.docx">Wayback machine statement</a>
         </ul>
+    </section>
+
+    <section class="labs">
+        <h2>Labs </h2>
+            <ul>
+            <a href="lab2-w3js/w3js.html"> Lab 2</a>
+            </ul>
+       
+
     </section>
 
 </body>
