--- a/mobile/interaction.html
+++ b/mobile/interaction.html
@@ -30,9 +30,9 @@
 
     <section>
         <div>
-            <img class="pic" src="CSCI202/mobile/pic1.jpg">
-            <img class="pic" src="CSCI202/mobile/pic2.jpg">
-            <img class="pic" src="CSCI202/mobile/pic3.jpg">
+            <img class="pic" src="pic1.jpg">
+            <img class="pic" src="pic2.jpg">
+            <img class="pic" src="pic3.jpg">
             <br>
         </div>
         <button onclick="myShow.previous()">previous</button>
