--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <h2>Labs </h2>
             <ul>
             <a href="lab2-w3js/w3js.html"> Lab 2</a>
+            <a href="mobile/interaction.html"> test</a>
             </ul>
        
 
