--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <li><a href="painting/selfportrait.html">Hyper-text Self-portrait</a> </li>
             <li><a href="SelfportraitStatement.docx">Self-portrait Reflection</a> </li>
-            <li><a href="#">Mobile Site</a></li>
+            <li><a href="mobilesite-master/index.html">Mobile Site</a></li>
             <li><a href="#">Community Building</a></li>
             </nav>
             
@@ -40,7 +40,6 @@
         <h2>Labs </h2>
             <ul>
             <a href="lab2-w3js/w3js.html"> Lab 2</a>
-            <a href="mobile/interaction.html"> test</a>
             </ul>
        
 
