--- a/index.html
+++ b/index.html
@@ -31,15 +31,24 @@
     <section class="exercises">
         <h2>Exercises</h2>
         <ul>
+            <nav>
             <a href="painting/painiting.html">Reproduce Painting</a>
-            <a href="wayback.docx">Wayback machine statement</a>
+            <a href="wayback.doc">Wayback machine statement</a>
+            <a href="clock exercise/index.html">Clock exercise </a>
+            <a href="json exercise/index.html">Json exercise 1t</a>
+            <a href="js-array/index.html">Js-array exercise 1</a>
+            <a href="js-array/index1.html">Js-array exercise 2</a>
+        </nav>
         </ul>
     </section>
 
     <section class="labs">
         <h2>Labs </h2>
             <ul>
+                <nav> 
             <a href="lab2-w3js/w3js.html"> Lab 2</a>
+                </nav>
+
             </ul>
        
 
