--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="painting/painiting.html">Reproduce Painting</a>
             <a href="wayback.docx">Wayback machine statement</a>
             <a href="clock exercise/index.html">Clock exercise </a>
-            <a href="json exercise/index.html">Json exercise 1t</a>
+            <a href="json exercise/index.html">Json exercise 1</a>
             <a href="js-array/index.html">Js-array exercise 1</a>
             <a href="js-array/index1.html">Js-array exercise 2</a>
         </nav>
