--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="painting/selfportrait.html">Hyper-text Self-portrait</a> </li>
             <li><a href="SelfportraitStatement.docx">Self-portrait Reflection</a> </li>
             <li><a href="mobilesite-master/index.html">Mobile Site</a></li>
-            <li><a href="#">Community Building</a></li>
+            <li><a href="https://wp.wwu.edu/amywisegarver/">Community Building</a></li>
             </nav>
             
         </ul>
