--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul>
                 <nav> 
             <a href="lab2-w3js/w3js.html"> Lab 2</a>
-            <a href="lab3/lab3-bootstrap.html"> Lab 3</a>
+            <a href="lab3-bootstrap.html"> Lab 3</a>
             
                 </nav>
 
