--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
 
             <li><a href="painting/selfportrait.html">Hyper-text Self-portrait</a> </li>
-            <li><a href="SelfportraitStatement.docx">Self-portrait Reflection</a> </li>
+            <li><a href="Written statement.docx">Self-portrait Reflection</a> </li>
             <li><a href="mobilesite-master/index.html">Mobile Site</a></li>
             <li><a href="https://wp.wwu.edu/amywisegarver/">Community Building</a></li>
             </nav>
