--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul>
             <nav>
             <a href="painting/painiting.html">Reproduce Painting</a>
-            <a href="Wayback.docx">Wayback machine statement</a>
+            <a href="wayback.doc">Wayback machine statement</a>
             <a href="clock exercise/index.html">Clock exercise </a>
             <a href="json exercise/index.html">Json exercise 1</a>
             <a href="js-array/index.html">Js-array exercise 1</a>
