--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="Written statement.docx">Self-portrait Reflection</a> </li>
             <li><a href="mobilesite-master/index.html">Mobile Site</a></li>
             <li><a href="https://wp.wwu.edu/amywisegarver/">Community Building</a></li>
+            <li><a href="final report.docx">Community Building</a></li>    
             </nav>
             
         </ul>
